--- a/css/stylesprofile.css
+++ b/css/stylesprofile.css
@@ -20,6 +20,9 @@ ul, ol {
 img {
 width: 100%;
 }
+a:hover {
+	color: #fa255e;
+}
 
 /*dar estilo al header*/
 .main-header, .main-footer{
@@ -37,6 +40,35 @@ width: 100%;
 	margin: 10px 10px;
 }
 
+/*dar estilo a la sección de inicio*/
+
+.login-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #fa255e;
+	color: #000000;
+	font-size: 1em;
+	max-width: 150px;
+	max-height: 30px;
+	border-radius: 5px;
+	margin: 15px auto;
+}
+
+.login-button:hover {
+	color: #fff;
+}
+
+.register-link {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 1em;
+	margin: 15px auto;
+}
+ /*Estilo del Perfil*/
+
 .perfil img {
   max-width: 50%;
   padding-left: 20px;
@@ -52,14 +84,18 @@ width: 100%;
   text-align: justify;
   color: #C39EA0;
 }
-.perfil a {
 
-}
 a {
 	display: inline-block;
 	text-decoration: none;
+	color: #000000;
 }
-h3 {
+
+a:hover {
+	color: #fa255e;
+}
+
+h2 {
 	padding-top: 20px;
 }
 
