--- a/css/stylesprofile.css
+++ b/css/stylesprofile.css
@@ -76,6 +76,7 @@ a:hover {
   float:left;
   max-width: 250px;
   margin-right: 15px;
+
   }
 
 .perfil p {
@@ -135,8 +136,13 @@ h2 {
 	height: 6px;
 	border-right: none;
 	border-left: none;
-	border-top: solid 1px #000000;
-	border-bottom: solid 1px #000000;
+	border-top: solid 1px #C39EA0;
+	border-bottom: solid 1px #C39EA0;
+}
+
+.tituloEventos {
+	color: #C39EA0;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px #FA255E;
 }
 
 /*dar estilo al contenido del footer*/
