--- a/css/faq_wander.css
+++ b/css/faq_wander.css
@@ -28,7 +28,7 @@ button.btn.btn-link.collapsed:hover {
 }
 
 div.accordion {
-	margin left: 25px;
+	margin left: 2px;
 	}
 
 
@@ -49,6 +49,7 @@ div.card-body-one, div.card-body-two {
 ul.accordion-list a{
 	display: flex;
 	color: #fa255e;
+	font-size: 1.5em;
 	}
 
 ul.accordion-list a:hover {
@@ -59,6 +60,12 @@ ul, ol {
 	padding: 0;
 	margin: 0;
 	list-style: none;
+}
+
+li{
+	font-size: 1.3em;
+	color: #fa255e;
+	text-align: left;
 }
 
 img {
