Formulario final de registro + Agregue una carpeta con iconos

--- a/css/styles-registration.css
+++ b/css/styles-registration.css
@@ -49,38 +49,63 @@ a:hover {
 	width: 100px;
 	margin: 10px 10px;
 }
+
+/*dar estilo a la sección de inicio*/
+
+.login-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #fa255e;
+	color: #000000;
+	font-size: 1em;
+	max-width: 150px;
+	max-height: 30px;
+	border-radius: 5px;
+	margin: 15px auto;
+}
+
+.login-button:hover {
+	color: #fff;
+}
+
+.register-link {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 1em;
+	margin: 15px auto;
+}
+
 /* estilo formulario de registro*/
 .titulo{
     margin-left: 20px;
+/* estilo temporal
     border-color: blue;
     border-width: 1px;
-    border-style: solid;
-}
-
-.row {
-  border-color: green;
-  border-width: 1px;
-  border-style: solid;
-
-}
-
-.foto-perfil {
-  border-color: red;
-  border-width: 1px;
-  border-style: solid;
-  margin-left: 20px;
-  margin-top: 15px;
+    border-style: solid;*/
 }
 
 .formulario {
+	margin-left: 20px;
+	font-size: 1em;
+/* estilo temporal
   border-color: yellow;
   border-width: 1px;
-  border-style: solid;
+  border-style: solid;*/
 }
 
 
+.boton{
+	background-color: #fa255e;
+	color: #000000;
+	border-radius: 5px;
+}
 
-
+.boton:hover{
+	color: #fff;
+}
 
 /*dar estilo al contenido del footer*/
 .footer-list {
