--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 body {
 	font-family: "Roboto",Arial,sans-serif;
 	background-color: #f8e5e5;
+	font-size: 0.8em;
 }
 
 ul, ol {
@@ -50,7 +51,6 @@ a:hover {
 	margin: 10px 10px;
 }
 /*dar estilo a la sección de inicio*/
-
 .login-button {
 	display: flex;
 	justify-content: center;
@@ -58,8 +58,9 @@ a:hover {
 	background-color: fa255e;
 	color: #000000;
 	font-size: 1em;
-	max-width: 150px;
-	max-height: 30px;
+	max-width: 100px;
+	max-height: 50px;
+	padding: 5px;
 	border-radius: 5px;
 	margin: 15px auto;	
 }
@@ -74,7 +75,7 @@ a:hover {
 	align-items: center;
 	color: #fff;
 	font-size: 1em;
-	margin: 15px auto;	
+	margin: 20px auto;	
 }
 
 /*dar estilo al carousel*/
@@ -82,16 +83,22 @@ a:hover {
 	text-align: center;
 	background-image: url(../images/beach-group.jpg);
 	background-size: cover;
+	color: f1f1f1;
+	text-shadow: 2px 2px 2px #000;
 	padding: 30px;
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
 
+
 /*dar estilo a la barra de búsqueda*/
 .search-bar {
 	background-color: #303030;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.search-bar h3 {
+.search-bar h3, label {
 	color: f1f1f1;
 }
 
@@ -114,11 +121,6 @@ a:hover {
 	padding: 8px;
 }
 
-/*dar estilo al contenido del footer*/
-.footer-list {
-	font-size: 0.8em;
-}
-
 .copyright img {
 	width: 30px;
 }
@@ -129,11 +131,6 @@ a:hover {
 
 .social-links {
 	text-align: right;
-}
-
-/*dar estilo al search bar*/
-.search-bar {
-	
 }
 
 /* styles temporales - prueba de estructura */
