--- a/css/styles-login.css
+++ b/css/styles-login.css
@@ -12,6 +12,7 @@
 body {
 	font-family: "Roboto",Arial,sans-serif;
 	background-color: #f8e5e5;
+	font-size: 0.8em;
 }
 
 ul, ol {
@@ -60,7 +61,8 @@ a:hover {
 	color: #000000;
 	font-size: 1em;
 	max-width: 150px;
-	max-height: 30px;
+	max-height: 50px;
+	padding: 5px;
 	border-radius: 5px;
 	margin: 15px auto;
 }
@@ -75,7 +77,7 @@ a:hover {
 	align-items: center;
 	color: #fff;
 	font-size: 1em;
-	margin: 15px auto;
+	margin: 20px auto;
 }
 
 /* estilo formulario de registro*/
@@ -89,8 +91,7 @@ a:hover {
 
 .formulario {
 	margin-left: 20px;
-	font-size: 1em;
-/* estilo temporal
+	/* estilo temporal
   border-color: yellow;
   border-width: 1px;
   border-style: solid;*/
@@ -115,11 +116,16 @@ a:hover {
 	color: #fff;
 }
 
+.ingreso {
+	height: 40px;
+}
+
+.ingreso-container {
+	margin-left: 20px;
+}
 
 /*dar estilo al contenido del footer*/
-.footer-list {
-	font-size: 0.8em;
-}
+
 
 .copyright img {
 	width: 30px;
