--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 @import "normalize.css";
 @import "bootstrap-grid.min.css";
@@ -85,9 +85,13 @@ a:hover {
 	background-size: cover;
 	color: f1f1f1;
 	text-shadow: 2px 2px 2px #000;
-	padding: 30px;
+	padding: 30px 150px;
 	margin-top: 15px;
 	margin-bottom: 15px;
+}
+
+.carousel p {
+	font-size: 1.2em;
 }
 
 
