--- a/css/stylesprofile.css
+++ b/css/stylesprofile.css
@@ -9,6 +9,7 @@
 body {
 	font-family: "Roboto",Arial,sans-serif;
 	background-color: #f8e5e5;
+	font-size: 0.8em;
 }
 
 ul, ol {
@@ -41,7 +42,6 @@ a:hover {
 }
 
 /*dar estilo a la sección de inicio*/
-
 .login-button {
 	display: flex;
 	justify-content: center;
@@ -50,7 +50,8 @@ a:hover {
 	color: #000000;
 	font-size: 1em;
 	max-width: 150px;
-	max-height: 30px;
+	max-height: 50px;
+	padding: 5px;
 	border-radius: 5px;
 	margin: 15px auto;
 }
@@ -65,7 +66,7 @@ a:hover {
 	align-items: center;
 	color: #fff;
 	font-size: 1em;
-	margin: 15px auto;
+	margin: 20px auto;
 }
  /*Estilo del Perfil*/
 
