--- a/css/styles-login.css
+++ b/css/styles-login.css
@@ -105,23 +105,19 @@ a:hover {
 	color: #fa255e;
 }
 
-
-.boton{
-	background-color: #fa255e;
-	color: #000000;
-	border-radius: 5px;
-}
-
-.boton:hover{
-	color: #fff;
-}
-
 .ingreso {
 	height: 40px;
 }
 
 .ingreso-container {
 	margin-left: 20px;
+}
+
+.search-button {
+	background-color: #fa255e;
+	border-style: none;
+	padding: 4px 15px;
+	border-radius: 5px;
 }
 
 /*dar estilo al contenido del footer*/
