actualizacion de bg-color y php partials

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 
 body {
 	font-family: "Roboto",Arial,sans-serif;
-	background-color: #f8e5e5;
+	background-color: #fff;
 	font-size: 0.8em;
 }
 
