--- a/css/styles-registration.css
+++ b/css/styles-registration.css
@@ -11,7 +11,7 @@
 
 body {
 	font-family: "Roboto",Arial,sans-serif;
-	background-color: #f8e5e5;
+	background-color: #fff;
 	font-size: 0.8em;
 }
 
@@ -19,7 +19,7 @@ ul, ol {
 	padding: 0;
 	margin: 0;
 	list-style: none;
-}
+	}
 
 img {
 	width: 100%;
@@ -81,23 +81,36 @@ a:hover {
 }
 
 /* estilo formulario de registro*/
+.fondo {
+	background-image: url(../images/ibiza.jpg);
+	background-size: cover;
+	padding: 20px;
+	margin-top:15px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
 .titulo{
-    margin-left: 20px;
-/* estilo temporal
-    border-color: blue;
-    border-width: 1px;
-    border-style: solid;*/
+  display: flex;
+	justify-content: center;
 }
 
-.formulario {
-	margin-left: 20px;
-	/* estilo temporal
-  border-color: yellow;
-  border-width: 1px;
-  border-style: solid;*/
+.formulario{
+	display: flex;
+	justify-content: center;
 }
 
-.search-button {
+.final-form{
+	display: flex;
+	justify-content: center;
+}
+
+.boton{
+	display: flex;
+	justify-content: center;
+}
+
+.btn-btn-primary {
 	background-color: #fa255e;
 	border-style: none;
 	padding: 4px 15px;
@@ -105,6 +118,23 @@ a:hover {
 }
 
 /*dar estilo al contenido del footer*/
+
+ul li a {
+	color: white;
+	line-height:0px;
+	padding: 0;
+	margin: 0;
+	font-size: 0.8em;
+}
+
+ul li a:hover{
+	color: #fa255e;
+	text-decoration: none;
+}
+
+ul {
+	line-height:normal;
+}
 
 .copyright img {
 	width: 30px;
@@ -116,4 +146,10 @@ a:hover {
 
 .social-links {
 	text-align: right;
+}
+
+@media (max-width: 560px){
+	.form-check-label {
+		color: white;
+	}
 }
