--- a/css/styles-login.css
+++ b/css/styles-login.css
@@ -53,7 +53,7 @@ a:hover {
 
 /*dar estilo a la sección de inicio*/
 
-.login-button {
+#login-button{
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -67,7 +67,7 @@ a:hover {
 	margin: 15px auto;
 }
 
-.login-button:hover {
+#login-button:hover {
 	color: #fff;
 }
 
@@ -80,21 +80,55 @@ a:hover {
 	margin: 20px auto;
 }
 
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* estilo formulario de registro*/
+
 .titulo{
-    margin-left: 20px;
-/* estilo temporal
-    border-color: blue;
-    border-width: 1px;
-    border-style: solid;*/
+		display: flex;
+		justify-content: center;
 }
 
 .formulario {
-	margin-left: 20px;
-	/* estilo temporal
-  border-color: yellow;
-  border-width: 1px;
-  border-style: solid;*/
+	display: flex;
+	justify-content: space-between;
 }
 
 .link-comun {
@@ -119,6 +153,16 @@ a:hover {
 	padding: 4px 15px;
 	border-radius: 5px;
 }
+
+span i{
+	color:black;
+}
+
+span i:hover {
+	color: #fa255e;
+}
+
+
 
 /*dar estilo al contenido del footer*/
 
