--- a/css/styles-registration.css
+++ b/css/styles-registration.css
@@ -1,217 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-@import "normalize.css";
-@import "bootstrap-grid.min.css";
-
-
-/*resets de base*/
-* {
-	box-sizing: border-box;
-}
-
-body {
-	font-family: "Roboto",Arial,sans-serif;
-	background-color: #fff;
-	font-size: 0.8em;
-}
-
-ul, ol {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	}
-
-img {
-	width: 100%;
-}
-
-a {
-	display: inline-block;
-	text-decoration: none;
-	color: #f1f1f1;
-}
-
-a:hover {
-	color: #fa255e;
-}
-
-/*dar estilo al header*/
-.main-header, .main-footer{
-	background-color: #303030;
-	color: #f1f1f1;
-}
-
-.iso {
-	float: left;
-	width: 50px;
-}
-
-.logo {
-	width: 100px;
-	margin: 10px 10px;
-}
-
-/*dar estilo a la sección de inicio*/
-
-#login-button {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: #fa255e;
-	color: #000000;
-	font-size: 1em;
-	max-width: 150px;
-	max-height: 50px;
-	padding: 5px;
-	border-radius: 5px;
-	margin: 15px auto;
-}
-
-#login-button:hover {
-	color: #fff;
-}
-
-.register-link {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: #fff;
-	font-size: 1em;
-	margin: 20px auto;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: none; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-	background-color: pink;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 25%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* estilo formulario de login*/
-
-.titulo{
-		display: flex;
-		justify-content: center;
-}
-
-.link-comun {
-	color: black;
-}
-
-.link-comun:hover {
-	color: #fa255e;
-}
-
-.search-button {
-	background-color: #fa255e;
-	border-style: none;
-	padding: 4px 15px;
-	border-radius: 5px;
-}
-
-
-
-/* estilo formulario de registro*/
-.fondo {
-	background-image: url(../images/ibiza.jpg);
-	background-size: cover;
-	padding: 20px;
-	margin-top:15px;
-	margin-left: 15px;
-	margin-right: 15px;
-}
-
-.titulo{
-  display: flex;
-	justify-content: center;
-}
-
-.formulario{
-	display: flex;
-	justify-content: center;
-}
-
-.final-form{
-	display: flex;
-	justify-content: center;
-}
-
-.boton{
-	display: flex;
-	justify-content: center;
-}
-
-.btn-btn-primary {
-	background-color: #fa255e;
-	border-style: none;
-	padding: 4px 15px;
-	border-radius: 5px;
-}
-
-/*dar estilo al contenido del footer*/
-
-ul li a {
-	color: white;
-	line-height:0px;
-	padding: 0;
-	margin: 0;
-	font-size: 0.8em;
-}
-
-ul li a:hover{
-	color: #fa255e;
-	text-decoration: none;
-}
-
-ul {
-	line-height:normal;
-}
-
-.copyright img {
-	width: 30px;
-}
-
-.copyright p {
-	font-size: 0.6em;
-}
-
-.social-links {
-	text-align: right;
-}
-
-@media (max-width: 560px){
-	.form-check-label {
-		color: white;
-	}
-}
+/* Archivo para borrar*/
