--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ a:hover {
 }
 
 /*dar estilo a la sección de inicio*/
-.login-button {
+#login-button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -66,7 +66,7 @@ a:hover {
 	margin: 15px auto;
 }
 
-.login-button:hover {
+#login-button:hover {
 	color: #fff;
 }
 
