--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,163 @@ a:hover {
 	border-radius: 5px;
 }
 
+/*Estilo del Perfil*/
+ .profile{
+	width: 100%;
+	position: relative;
+	padding-top: 20px;
+	margin-right: 15px;
+	padding-left: 20px;
+}
 
+ .profile .cover {
+	display: block;
+	position: relative;
+	z-index: 0;
+	overflow: hidden;
+	text-align: center;
+	border: 5px solid #FFF;
+}
+.profile .user {
+	position: relative;
+	padding: 0px 5px 5px;
+}
+
+.profile .user .avatar {
+	position: absolute;
+	left: 20px;
+	top: -80px;
+	z-index: 1;
+	max-width: 50%;
+	border-radius: 50%;
+	max-width: 150px;
+}
+
+.profile .info {
+	display: block;
+	float: left;
+	margin: -35px 0px 0px 180px;
+  }
+
+ .profile {
+	width: 100%;
+	position: relative;
+	background: #FFF;
+	padding-bottom: 5px;
+	margin-bottom: 20px;
+}
+
+.coverImage {
+	width:800px;
+	height:300px;
+}
+.profilePic {
+	border-radius: 50%;
+}
+
+/*Perfil de viajero*/
+
+  .tituloEventos{
+		padding-top: 20px;
+
+	}
+	
+.column {
+	float: left;
+	max-width: 100px;
+	padding-left: 0px;
+	padding-right:0px;
+	margin: 10px;
+	position: relative;
+
+}
+
+.label {
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	background-color: rgba(0,0,0,0.4);
+	color: #f1f1f1;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	padding: 20px 0;
+	border-radius: 5px;
+}
+
+.interest {
+	background-color: #C39EA0;
+	border-radius:8px;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+
+}
+
+.checked {
+  color: #FA255E;
+}
+
+.special-hr {
+	height: 6px;
+	border-right: none;
+	border-left: none;
+	border-top: solid 1px #C39EA0;
+	border-bottom: solid 1px #C39EA0;
+}
+
+/*Eventos*/
+.timeline {
+
+	height: auto;
+	margin:5px auto 0;
+	padding: 5px;
+
+}
+
+.timeline li{
+	position: relative;
+	list-style: none;
+
+}
+
+.timeline li .item {
+	position: relative;
+	min-height: 60px;
+
+	padding: 0 20px 20px 30px;
+	margin-left: 20px;
+	border-left: 1px solid;
+
+}
+
+.timeline li:last-child .item{
+		border-left: 1px solid transparent;
+}
+
+.timeline li .item span {
+	position: absolute;
+	top:-8px;
+	left:-20px;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	background: #FA255E;
+	color: #fff;
+	font-weight: 700;
+	border-radius: 50%;
+
+}
+
+/*Grupos*/
+
+.groups-image {
+	padding: 15px;
+}
 
 /* styles temporales - prueba de estructura */
 /* [class*=col], .container { */
