--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ img {
 a {
 	display: inline-block;
 	text-decoration: none;
-	color: #f1f1f1;
+	color: black;
 }
 
 a:hover {
@@ -41,6 +41,14 @@ a:hover {
 	color: #f1f1f1;
 }
 
+footer ul {
+	padding-bottom: 30px;
+}
+
+header a, footer a {
+	color: #f1f1f1;
+}
+
 .iso {
 	float: left;
 	width: 50px;
@@ -49,6 +57,19 @@ a:hover {
 .logo {
 	width: 100px;
 	margin: 10px 10px;
+}
+
+.copyright img {
+	width: 30px;
+}
+
+.copyright p {
+	padding-top: 8px;
+	font-size: 0.6em;
+}
+
+.social-links {
+	text-align: right;
 }
 
 /*dar estilo a la sección de inicio*/
@@ -96,10 +117,10 @@ a:hover {
 /* Modal Content/Box */
 .modal-content {
 	background-color: pink;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 35vw; /* Could be more or less, depending on screen size */
+	margin: 5% auto; /* 15% from the top and centered */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 35vw; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
@@ -110,15 +131,13 @@ a:hover {
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
 
 /* estilo formulario de login*/
-
 .modal-link {
 	color: #fa255e;
 }
@@ -134,7 +153,7 @@ a:hover {
 	background-size: cover;
 	color: #f1f1f1;
 	text-shadow: 2px 2px 2px #000;
-	padding: 30px 150px;
+	padding: 30px 15%;
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
@@ -152,6 +171,7 @@ a:hover {
 	align-items: center;
 	padding: 15px 0;
 }
+
 .search-bar h3, label {
 	color: #f1f1f1;
 	margin-top: 0px;
@@ -180,19 +200,6 @@ a:hover {
 	padding: 8px;
 }
 
-.copyright img {
-	width: 30px;
-}
-
-.copyright p {
-	padding-top: 8px;
-	font-size: 0.6em;
-}
-
-.social-links {
-	text-align: right;
-}
-
 /* estilo formulario de registro*/
 .register-body {
 	background-image: url(../images/ibiza.jpg);
@@ -204,7 +211,7 @@ a:hover {
 }
 
 .titulo{
-  display: flex;
+	display: flex;
 	justify-content: center;
 }
 
@@ -241,15 +248,18 @@ a:hover {
 
 
 /*Estilo del Perfil*/
- .profile{
+.profile{
 	width: 100%;
 	position: relative;
 	padding-top: 20px;
 	margin-right: 15px;
+	margin-bottom: 20px;
 	padding-left: 20px;
+	padding-bottom: 5px;
+	background: #FFF;	
 }
 
- .profile .cover {
+.profile .cover {
 	display: block;
 	position: relative;
 	z-index: 0;
@@ -257,6 +267,7 @@ a:hover {
 	text-align: center;
 	border: 5px solid #FFF;
 }
+
 .profile .user {
 	position: relative;
 	padding: 0px 5px 5px;
@@ -278,26 +289,18 @@ a:hover {
 	margin: -35px 0px 0px 180px;
   }
 
- .profile {
-	width: 100%;
-	position: relative;
-	background: #FFF;
-	padding-bottom: 5px;
-	margin-bottom: 20px;
-}
-
 .coverImage {
 	width:800px;
 	height:300px;
 }
+
 .profilePic {
 	border-radius: 50%;
 }
 
 /*Perfil de viajero*/
-
-  .tituloEventos{
-		padding-top: 20px;
+.tituloEventos{
+	padding-top: 20px;
 
 	}
 
@@ -308,7 +311,6 @@ a:hover {
 	padding-right:0px;
 	margin: 10px;
 	position: relative;
-
 }
 
 .label {
@@ -328,12 +330,11 @@ a:hover {
 .interest {
 	background-color: #C39EA0;
 	border-radius:8px;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-
+	border: none;
+	color: white;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
 }
 
 .checked {
@@ -350,31 +351,26 @@ a:hover {
 
 /*Eventos*/
 .timeline {
-
 	height: auto;
 	margin:5px auto 0;
 	padding: 5px;
-
 }
 
 .timeline li{
 	position: relative;
 	list-style: none;
-
 }
 
 .timeline li .item {
 	position: relative;
 	min-height: 60px;
-
 	padding: 0 20px 20px 30px;
 	margin-left: 20px;
 	border-left: 1px solid;
-
 }
 
 .timeline li:last-child .item{
-		border-left: 1px solid transparent;
+	border-left: 1px solid transparent;
 }
 
 .timeline li .item span {
@@ -389,13 +385,17 @@ a:hover {
 	color: #fff;
 	font-weight: 700;
 	border-radius: 50%;
-
 }
 
 /*Grupos*/
 
 .groups-image {
 	padding: 15px;
+}
+
+/*dar estilo al FAQ*/
+.card-header{
+	background-color: #f8e5e5 !important;
 }
 
 /* styles temporales - prueba de estructura */
