--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,41 @@ a:hover {
 	color: #f1f1f1;
 }
 
+/*dar estilo al menu de usuario*/
+.nav-avatar {
+	width: 40px;
+	border-radius: 50%;
+	background-color: #ffffff;
+	padding: 2px;
+	float: right;
+}
+
+.user-menu {
+	float: left;
+	overflow: hidden;
+	padding-top: 15px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #303030;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  padding: 12px 16px;
+  display: block;
+  text-align: left;
+}
+
+.user-menu:hover .dropdown-content {
+  display: block;
+}
+
 footer ul {
 	padding-bottom: 30px;
 }
