--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ a:hover {
 	border-radius: 50%;
 	background-color: #ffffff;
 	padding: 2px;
+	margin-top: 5px;
 	float: right;
 }
 
@@ -158,6 +159,11 @@ header a, footer a {
 	width: 35vw; /* Could be more or less, depending on screen size */
 }
 
+/*Keep modal open*/
+.show {
+		display: block;
+	}
+
 /* The Close Button */
 .close {
   color: #aaa;
@@ -245,9 +251,10 @@ header a, footer a {
 	margin-right: 15px;
 }
 
-.titulo{
+.centeredTitle{
 	display: flex;
 	justify-content: center;
+	color: black;
 }
 
 .form-row {
